feat(#397): revision and cleaning of Armeria setup